--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/torneo-rummi",
+            "outputPath": "dist/DMK",
             "index": "src/index.html",
             "baseHref": "/DMK/",
             "browser": "src/main.ts",
