--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "ng build --base-href /DMK/",
+    "deploy": "ng deploy",
+    "push": "git add . && git commit -m 'Actualización' && git push origin main",
+    "update": "npm run build && npm run deploy"
   },
   "private": true,
   "dependencies": {
